http trigger function - test

--- a/azure.yaml
+++ b/azure.yaml
@@ -8,3 +8,8 @@ infra:
   path: infra
 pipeline:
   provider: github
+services:
+  event-consumer-func:
+    project: apps/az
+    host: function
+    language: ts
