--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "private": true,
   "scripts": {
+    "azfn": "func",
     "build": "turbo run build",
     "clean": "turbo run clean",
     "dev": "turbo run dev",
@@ -11,8 +12,10 @@
     "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
+    "@azure/functions": "^4.5.1",
     "prettier": "^3.2.5",
-    "turbo": "^2.1.3"
+    "turbo": "^2.1.3",
+    "typescript": "^5.6.3"
   },
   "engines": {
     "node": ">=18"
