NPM lockfile, fix principle type

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,4 +4,6 @@ enableGlobalCache: false
 
 progressBarStyle: simba
 
+nodeLinker: node-modules
+
 yarnPath: .yarn/releases/yarn-4.5.0-git.20241006.hash-29b7fef.cjs
