--- a/apps/az/tsconfig.json
+++ b/apps/az/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "lib": [
-      "ES2015"
+      "ESNext"
     ],
     "outDir": "./dist"
   },
