--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Provision Infrastructure
         run: azd provision --no-prompt
         env:
+          AZURE_CF_PRIVATE_KEY: ${{ secrets.AZURE_CF_PRIVATE_KEY }}
           AZD_INITIAL_ENVIRONMENT_CONFIG: ${{ secrets.AZD_INITIAL_ENVIRONMENT_CONFIG }}
       - name: Deploy Application
         run: azd deploy --no-prompt
