--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -37,6 +37,8 @@ jobs:
       - name: Provision Infrastructure
         run: azd provision --no-prompt
         env:
+          AZURE_CLOUDFLARE_ACCOUNT_ID: ${{ secrets.AZURE_CLOUDFLARE_ACCOUNT_ID }}
+          CLOUDFLARE_API_TUNNELS: ${{ secrets.CLOUDFLARE_API_TUNNELS }}
           AZURE_CF_PRIVATE_KEY: ${{ secrets.AZURE_CF_PRIVATE_KEY }}
           AZURE_VM_PASS: ${{ secrets.AZURE_VM_PASS }}
           AZD_INITIAL_ENVIRONMENT_CONFIG: ${{ secrets.AZD_INITIAL_ENVIRONMENT_CONFIG }}
