--- a/azure.yaml
+++ b/azure.yaml
@@ -9,3 +9,8 @@ infra:
 pipeline:
   provider: github
 
+services:
+  storefront:
+    host: staticwebapp
+    project: ./apps/storefront
+    language: ts
