--- a/apps/platform/package.json
+++ b/apps/platform/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@azure/cosmos": "^4.1.1",
+    "@edge-runtime/node-utils": "3.0.0",
+    "@repo/cosmos": "workspace:*",
     "next": "15.0.0-canary.188",
     "react": "19.0.0-rc-70fb1363-20241010",
     "react-dom": "19.0.0-rc-70fb1363-20241010"
