--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
-    "@azure/functions": "^4.5.1",
+    "@azure/functions": "^4.2.0",
     "prettier": "^3.2.5",
     "turbo": "^2.1.3",
     "typescript": "^5.6.3"
@@ -21,7 +21,7 @@
     "node": ">=18"
   },
   "name": "kitchen-sink",
-  "packageManager": "yarn@4.5.0",
+  "packageManager": "npm@10.5.0",
   "workspaces": [
     "apps/*",
     "packages/*"
