--- a/apps/iwashacked/package.json
+++ b/apps/iwashacked/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "iwashacked",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@scure/btc-signer": "^1.4.0",
-    "next": "15.0.0-canary.196",
-    "react": "19.0.0-rc-cd22717c-20241013",
-    "react-dom": "19.0.0-rc-cd22717c-20241013"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.15"
   },
   "devDependencies": {
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.0-canary.196",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "eslint": "^8",
+    "eslint-config-next": "14.2.15"
   }
 }
